2007-08-07  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>

	* Test/TestDocumentTagTable.cs: Several test units
	  for DocumentTagTable class.
	* Test/TestDocumentTag.cs,
	  Monodoc.Editor.Gui/Monodoc.Editor.Gui.mdp: Added skeleton for
	  inserting test units for DocumentTag class.
	* DocumentBufferArchiver.cs: Removed AddString and
	  AddPadding from class and moved them to DocumentUtils, the old
	  calls are changed to the new arrange.
	
	  Removed FormatEmpty method now FormatEnd handles all the formating
	  at the end of all the elements.
	
	  Some code cleanup when handling empty elements while deserializing.
	
	  Now in serialization we check that if a text is marked with
	  "significant-whitespace" is unescaped ie that the escaped newlines
	  in the text are recovered.
	* Utils.cs: Major hacking of utility methods for
	  deserialization:
	
	  Added GetAssociatedTextTag that is a method that takes a buffer and
	  a given tag then returns the associated text tag. 
	
	  Modified AddString method so after insertion of a given string in
	  the buffer with a "format" tag it terminates with an insertion of a
	  "format-end" region. 
	
	  New AddPaddingEmpty methods that insert a "padding-emtpy" region
	  used for empty elements conservation. 
	
	  New AddText method that handles the insertion of text strings
	  marking significant-whitespace at the start and end of the string
	  with the "significant-whitespace" tag and marking the rest of the
	  string with the given tag.
	
	  More lesser helper methods added.
	* DocumentTagTable.cs: Changed the name of method
	  InitializeTag to InitiazeDynamicTag so it represents better the
	  functionality of the method. Turned on the flag IsEditable for tags
	  "summary" and "remarks". Changed "remarks:Text" to an editable text
	  region.
	
	  Major change of editor defined tags: 
	
	  "padding" is now a region that is invisible and non-serializable
	  that is used to prevent merging of same tag regions.
	